--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,12 +5,24 @@ bdy
 	font-family: "Arial";
 }
 
+
+#cabecera
+{
+	background: #33A;
+border-radius: 1px 
+	color: white;
+	margin:0;
+	padding: 11px;
+}
 .container{
 	width: 70%;
 	text-align: left;
 	padding: 3rem;
 	border: 1px solid black;
 	margin: 0 auto;
+}
+.contairne h1{
+
 }
 h1{
 	font-size: 30px;
