--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,12 @@
-bdy
+body
 {
-	
+	color: red;
 	text-align: center;
 	font-family: "Arial";
+	font-size: 16px;
+	margin: 0;
+	padding: 0,
 }
-
 
 #cabecera
 {
