--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,11 @@
-bdy
+body
 {
-	
+	color: blue;
 	text-align: center;
 	font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 
